deployment/phpmyadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: NodePort      
  ports: 
    - port: 80
      targetPort: 80      
      nodePort: 30000      
  selector:
    app: phpmyadmin
